Implemented devise user authentication

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,10 @@
 body {
   background-color: #131314;
 }
+
+.navbar-default {
+  background-color: #ff6a00;
+  border: none;
+  border-radius: 0;
+
+}
