--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,132 @@
-<!-- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="/users/sign_up" class="reg-login">SIGN-UP</a>
+        <a href="/users/sign_in" class="reg-login">LOGIN</a>
+        <!-- <a href="/" class="jf-logo">JERKFEST</a> -->
+      </div>
+    </div>
+  </nav>
 
+
+<div class="jumbotron">
+
+
+  <div class="container-fluid">
+    <div class="row">
+    <!-- <div class="col-md-12"> -->
+
+
+    <div class='iphone-mock'>
+      <img src="https://s23.postimg.org/ne564fb2z/jerkfestival_iphone6splusspacegrey_portrait.png" alt="JerkFest app" id="iphone-resize">
+      <!-- <div class="app-info"> -->
+
+      </div>
+    </div>
+    <!-- </div> -->
+    <!-- </div> -->
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="info">
+        <p class="info-text">Introducing, the new <span id="jf-name">JerkFest</span> app!</p>
+        <hr>
+        <div class="">
+        <div class="app-store">
+          <img src="https://s24.postimg.org/7lzycfbmd/app_store_icon.png" alt="app-store">
+        </div>
+          <p>Now you can access everything <span id='jf-name'>JerkFest</span> - anytime, anywhere.</p>
+
+          <p> Sign up today and get access to updates and special offers!</p>
+        </div>
+      </div>
     </div>
   </div>
-</nav> -->
+</div>
+
+
+<div class="container-fluid">
+  <div class="row" id="row-info">
+    <div class="col-md-4">
+      <div class="users">
+        <i class="fa fa-users" aria-hidden="true"></i>
+        <p id="feature-text-head">User Registration</p>
+        <p id="feature-text">Easily manage your account and get access
+          to special events, merchandise and discounts! You can also
+          connect and socialize with other JerkFesters!</p>
+      </div>
+    </div>
+
+
+    <!-- <div class="row"> -->
+    <div class="col-md-4">
+      <div class="credit-card">
+        <i class="fa fa-credit-card" aria-hidden="true"></i>
+        <p id="feature-text-head">Secure Payment Processing</p>
+        <p id="feature-text">Purchase tickets to any JerkFest at your convenience.
+          Enjoy reserving and booking your flight, car,
+          and hotel with the peace of mind that your payment is secure.</p>
+      </div>
+    </div>
+    <!-- </div> -->
+
+
+
+
+
+  <!-- <div class="row"> -->
+    <div class="col-md-4">
+      <div class="info-circle">
+        <i class="fa fa-info-circle" aria-hidden="true"></i>
+        <p id="feature-text-head">Centralized Information</p>
+        <p id="feature-text">Get information about any JerkFest location as well as
+          special local events. You can also stay current with daily updates in
+          Caribbean music and news.</p>
+      </div>
+    </div>
+  <!-- </div> -->
+</div>
+</div>
+
+
+
+
+
+
+
+<footer class="jf-footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="jf-locations">
+          <a href="http://www.jerkfestival.com/" class="locations">JerkFest South Florida</a> |
+          <a href="https://jerkfestivalny.com/" class="locations">JerkFest New York</a> |
+          <a href="http://dcjerkfestival.com/" class="locations">JerkFest DC</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-md-offset-6">
+      <div class="grace-logo">
+      <img src="https://s23.postimg.org/sy69ftr9n/grace_jf_logo.png" alt="grace logo">
+    </div>
+    </div>
+
+    <div class="col-md-6 col-md-offset-6">
+      <div class="social-media">
+        <p id="follow">Follow Us:
+          <a href="https://www.facebook.com/JamaicanJerkFestivalFLA"><i class="fa fa-facebook" aria-hidden="true" id="sm-icons"></i></a>
+          <a href="#"><i class="fa fa-instagram" aria-hidden="true" id="sm-icons"></i></a>
+          <a href="https://twitter.com/jerkfestivalusa"><i class="fa fa-twitter" aria-hidden="true" id="sm-icons"></i></a>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="copyright">
+    &copy; 2017 Grace Jamaican Jerk Festival
+  </div>
+</footer>
