--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ body {
 
 
 #iphone-resize {
-  // margin-right: -50px;
+  padding-right: 0px;
 }
 
 .iphone-mock {
@@ -191,7 +191,7 @@ body {
   text-align: center;
   // padding-left: 0.2em;
   font-family: 'Nunito', sans-serif;
-  
+
 }
 
 .credit-card {
